--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.1",
     "cheerio": "^1.0.0-rc.2",
-    "client-sessions": "^0.8.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.5",
     "csurf": "^1.9.0",
     "ejs": "^2.3.2",
+    "ejs-lint": "^0.3.0",
     "express": "^4.13.0",
     "express-fileupload": "^1.1.1-alpha.2",
+    "express-session": "^1.15.6",
     "express-useragent": "^1.0.12",
     "formidable": "^1.2.1",
     "fs": "0.0.1-security",
